work in progress

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div id="new-map-btn"></div>
                     <span class="label-new-map">Lancer une nouvelle carte</span>
                 </div>
-                <a id="readMe-link" href="#" >Lire le README</a>
+                <div id="readMe-link"><span>README</span></div>
             </div>
             <div id="load-map-panel">
                 
