--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./src/css/villagesGen.css" type="text/css">
     <link rel="stylesheet" href="./src/css/coastal_Kingdom.css" type="text/css">
     <link rel="stylesheet" href="./src/css/humanBuildings.css" type="text/css">
+    <link rel="stylesheet" href="./src/css/marketInterface.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2D Map Generator</title>
@@ -149,6 +150,7 @@
     <script type="text/javascript" src="src/js/humanTownhall.js"></script>
     <script type="text/javascript" src="src/js/humanBuildings.js"></script>
     <script type="text/javascript" src="src/js/coastal_Kingdom.js"></script>
+    <script type="text/javascript" src="src/js/marketInterface.js"></script>
 
 
 
